--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
   <link href="style.css" rel="stylesheet" type="css/text">
 </head>
 <title>National Weather Service</title>
@@ -17,7 +17,10 @@
   <i class="fa fa-envelope-square"></i>
   <img src="gmail_32px_1124074_easyicon.net.png" alt="gmail logo">
 </div>
+<div class="weather-pics">
+</div>
 </body>
 <footer>
+
 </footer>
 </html>
