added minor syntax changes, css for images

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
   <i class="fa fa-plus-square"></i>
   <i class="fa fa-print"></i>
   <i class="fa fa-envelope-square"></i>
-  <img src="gmail_32px_1124074_easyicon.net.png" alt="gmail logo">
+  <img src="img/gmail_32px_1124074_easyicon.net.png" alt="gmail logo">
 </div>
-<div class="weather-pics">
+<div class="weather-pics1">
+  <p>Tonight</p>
+  <img src="img/nshra60.png" alt="60 degrees">
+  <p>
+
+
 </div>
 </body>
 <footer>
