--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
   <link href="style.css" rel="stylesheet" type="css/text">
+  <link href="normalize.css" rel="stylesheet" type="css/text">
 </head>
 <title>National Weather Service</title>
 <body>
