--- a/index.html
+++ b/index.html
@@ -17,11 +17,25 @@
       <img src="img/gmail_32px_1124074_easyicon.net.png" alt="gmail logo">
     </div>
     <div class="weather-pics1">
+      <img src="img/nshra60.png" alt="60 degrees">
     </div>
+  <div class="weather-list1">
+    <ul>
+      <li>Tonight</li>
+      <li>Monday</li>
+      <li>Monday Night</li>
+      <li>Tuesday</li>
+      <li>Tuesday Night</li>
+      <li>Wednesday</li>
+      <li>Wednesday Night</li>
+      <li>Thursday</li>
+      <li>Thursday Night</li>
+    </ul>
   </div>
-  <p>Tonight</p>
-  <img src="img/nshra60.png" alt="60 degrees">
-  <p>
+  <div class=""
+
+
+
 </div>
 </body>
 <footer>
