Added Nolans code to forked repo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,46 @@
 <title>National Weather Service</title>
 <body>
   <div class="container">
+    <div class='header'>
+    <img class='header_noaa'src="img/header_noaa.png" alt="" />
+    <img class='header_nws'src="img/header_nws.png" alt="" />
+    <img class='header_doc'src="img/header_doc.png" alt="" />
+  </div>
+
+  <ul>
+    <li><a class="#home">Home</a></li>
+    <li><a class="#forecast">Forecast</a></li>
+    <li><a class="#pastWeather">Past Weather</a></li>
+    <li><a class="safety">Safety</a></li>
+    <li><a class="#information">Information</a></li>
+    <li><a class="education">Education</a></li>
+    <li><a class="news">News</a></li>
+    <li><a class="search">Search</a></li>
+    <li><a class="#about">About</a></li>
+    </ul>
+  </ul>
+
+  <form><br>
+  <input type="text" name="search">
+  <input type="submit" value="Go"><br>
+</form>
+
+<h1 class='mainarticle'>Rain, thunderstorms developing from southern Plains to mid-Atlantic</h1>
+<p class='paragraph1'>A slow-moving storm system will be the focus for rain and thunderstorms from the southhern Plains across to the Southeast and Mid-Atlantic States early this week. Locally heavy rainfall could lead to isolated flash flooding, especially in the mid-Mississippi River Valley on Tuesday. Isolated severe thunderstorms will be possible Tuesday near the Gulf Coast associated with the same storm system. <a href="http://www.wpc.ncep.noaa.gov/discussions/hpcdiscussions.php?disc=pmdspd">Read more...</a></p>
+
+<a href="http://www.weather.gov/ForecastSearchHelp.html" class='locationhelp'>Your Location Examples</a>
+
+<h2 class='localforecast'>Your local forecast office is</h2>
+<a href="http://www.wrh.noaa.gov/sew/forecastlocation" class='currentweather'>Seattle, WA</a>
+
+<a href="http://www.nws.noaa.gov/wtf/MapClick.php?lat=47.65118686428349&lon=-122.39962885148964&lg=sp" class='spanish'>En Espa&#241;ol</a> <a href="" class='sharebutton'>Share</a>
+
+<div class='currentconditions'>
+<p class='currentcondtionsat'><strong>Current conditions at</strong></p>
+<p class='seattleboeingfield'>Seattle, Seattle Boeing Field (KBFI)</p>
+<p class='latitutde'><strong>Lat</strong>: 47.62&#176;N  &nbsp;&nbsp; <strong>Lon</strong>: -122.36&#176;W&nbsp;&nbsp; <strong>Elev</strong>: 16ft.</p>
+ </div>
+
     <div class="header-icons">
       <i class="fa fa-caret-down"></i>
       <i class="fa fa-facebook-official"></i>
