syncing up with other members

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img class='header_nws'src="img/header_nws.png" alt="" />
     <img class='header_doc'src="img/header_doc.png" alt="" />
   </div>
-
+<div class="navbar">
   <ul>
     <li><a class="#home">Home</a></li>
     <li><a class="#forecast">Forecast</a></li>
@@ -26,7 +26,7 @@
     <li><a class="#about">About</a></li>
     </ul>
   </ul>
-
+</div>
   <form><br>
   <input type="text" name="search">
   <input type="submit" value="Go"><br>
@@ -60,7 +60,7 @@
     <div class="weather-pics1">
       <img src="img/nshra60.png" alt="60 degrees">
     </div>
-  <div class="weather-list">
+  <div class="weather-list1">
     <ul>
       <li>Tonight</li>
       <li>Monday</li>
@@ -73,10 +73,9 @@
       <li>Thursday Night</li>
     </ul>
   </div>
-  <div class=""
+  <div class="weather-list2">
 
-
-
+</div>
 </div>
 </body>
 <footer>
