added weather pics and text to bottom

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 <p class='seattleboeingfield'>Seattle, Seattle Boeing Field (KBFI)</p>
 <p class='latitutde'><strong>Lat</strong>: 47.62&#176;N  &nbsp;&nbsp; <strong>Lon</strong>: -122.36&#176;W&nbsp;&nbsp; <strong>Elev</strong>: 16ft.</p>
  </div>
-
-    <div class="header-icons">
+ <div class="header-icons">
       <i class="fa fa-caret-down"></i>
       <i class="fa fa-facebook-official"></i>
       <i class="fa fa-twitter"></i>
@@ -56,11 +55,12 @@
       <i class="fa fa-print"></i>
       <i class="fa fa-envelope-square"></i>
       <img src="img/gmail_32px_1124074_easyicon.net.png" alt="gmail logo">
-    </div>
-    <div class="weather-pics1">
-      <img src="img/nshra60.png" alt="60 degrees">
-    </div>
-  <div class="weather-list1">
+</div>
+    <atom-panel class='top'>
+<div class="padded">
+<div class="inset-panel">
+<div class="panel-heading">Extended Forecast for <p>2 Miles NW West Seattle WA</p></div>
+<div class="panel-body-padded">
     <ul>
       <li>Tonight</li>
       <li>Monday</li>
@@ -72,11 +72,45 @@
       <li>Thursday</li>
       <li>Thursday Night</li>
     </ul>
+    <div class="panel-body-bottom">
+      <div class="weather-list2">
+    <ul>
+      <li>Showers Likely</li>
+      <li>Showers Likely then Chance Showers</li>
+      <li>Partly Cloudy</li>
+      <li>Sunny</li>
+      <li>Partly Cloudy</li>
+      <li>Mostly Cloudy</li>
+      <li>Mostly Sunny</li>
+      <li>Partlu Cloudy</li>
+    </ul>
   </div>
-  <div class="weather-list2">
-
 </div>
 </div>
+    </atom-panel>
+<div class="weather-pics-1">
+    <img src="img/nshra60.png" alt="60 degrees">
+</div>
+<div class="weather-pics-2" alt="70-40 degrees">
+    <img src="img/DualImage.png">
+</div>
+<div class="weather-pics-3">
+  <img src="img/nsct.png" alt="Partly Cloudy">
+</div>
+<div class="weather-pics-4">
+  <img src="img/few.png" alt="Sunny">
+</div>
+<div class="weather-pics-5">
+  <img src="img/nsct.png" alt="Partly Cloudy">
+</div>
+<div class="weather-pics-6">
+  <img src=""
+</div>
+<div class="weather-pics-7">
+</div>
+<div class="weather-pics-8">
+</div>
+<div class="weather-pics-9">
 </body>
 <footer>
 
