styling for bottom bar with pics

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 <div class="padded">
 <div class="inset-panel">
 <div class="panel-heading">Extended Forecast for <p>2 Miles NW West Seattle WA</p></div>
+</div>
 <div class="panel-body-padded">
+  <div class="weather-list-1">
     <ul>
       <li>Tonight</li>
       <li>Monday</li>
@@ -72,45 +74,53 @@
       <li>Thursday</li>
       <li>Thursday Night</li>
     </ul>
-    <div class="panel-body-bottom">
-      <div class="weather-list2">
-    <ul>
-      <li>Showers Likely</li>
-      <li>Showers Likely then Chance Showers</li>
-      <li>Partly Cloudy</li>
-      <li>Sunny</li>
-      <li>Partly Cloudy</li>
-      <li>Mostly Cloudy</li>
-      <li>Mostly Sunny</li>
-      <li>Partlu Cloudy</li>
-    </ul>
   </div>
-</div>
-</div>
-    </atom-panel>
-<div class="weather-pics-1">
+<div class="panel-body-bottom">
+  <div class="weather-pics-1">
+  <ul>
+    <li>
     <img src="img/nshra60.png" alt="60 degrees">
-</div>
-<div class="weather-pics-2" alt="70-40 degrees">
+  </li>
+  <li>
     <img src="img/DualImage.png">
-</div>
-<div class="weather-pics-3">
-  <img src="img/nsct.png" alt="Partly Cloudy">
-</div>
-<div class="weather-pics-4">
+  </li>
+  <li>
+    <img src="img/nsct.png" alt="Partly Cloudy">
+</li>
   <img src="img/few.png" alt="Sunny">
-</div>
-<div class="weather-pics-5">
+</li>
+<li>
   <img src="img/nsct.png" alt="Partly Cloudy">
+</li>
+<li>
+  <img src="img/bkn.png" alt="Partly Sunny">
+</li>
+<li>
+  <img src="img/nbkn.png" alt="Mostly Cloudy">
+</li>
+<li>
+  <img src="img/sct.png" alt="Mostly Sunny">
+</li>
+<li>
+  <img src="img/nsct.png" alt="Partly Cloudy">
+</li>
+</ul>
 </div>
-<div class="weather-pics-6">
-  <img src=""
+<div class="weather-list2">
+<ul>
+<li>Showers Likely</li>
+<li>Showers Likely then Chance Showers</li>
+<li>Partly Cloudy</li>
+<li>Sunny</li>
+<li>Partly Cloudy</li>
+<li>Mostly Cloudy</li>
+<li>Mostly Sunny</li>
+<li>Partlu Cloudy</li>
+</ul>
 </div>
-<div class="weather-pics-7">
 </div>
-<div class="weather-pics-8">
 </div>
-<div class="weather-pics-9">
+</atom-panel>
 </body>
 <footer>
 
