adding css changes to footer

--- a/index.html
+++ b/index.html
@@ -79,45 +79,36 @@
 <div class="panel-body-bottom">
   <div class="weather-pics-1">
   <ul>
-    <li>
-    <img src="img/nshra60.png" alt="60 degrees">
-  </li>
-  <li>
-    <img src="img/DualImage.png">
-  </li>
-  <li>
-    <img src="img/nsct.png" alt="Partly Cloudy">
-</li>
-  <img src="img/few.png" alt="Sunny">
-</li>
-<li>
-  <img src="img/nsct.png" alt="Partly Cloudy">
-</li>
-<li>
-  <img src="img/bkn.png" alt="Partly Sunny">
-</li>
-<li>
-  <img src="img/nbkn.png" alt="Mostly Cloudy">
-</li>
-<li>
-  <img src="img/sct.png" alt="Mostly Sunny">
-</li>
-<li>
-  <img src="img/nsct.png" alt="Partly Cloudy">
-</li>
-</ul>
+    <li><img src="img/nshra60.png" alt="60 degrees">
+      <p>Showers Likely</p>
+    </li>
+    <li><img src="img/DualImage.png">
+      <p>Showers Likely then Chance Showers</p>
+    </li>
+    <li><img src="img/nsct.png" alt="Partly Cloudy">
+      <p>Partly Cloudy</p>
+    </li>
+    <li><img src="img/few.png" alt="Sunny">
+      <p>Sunny</p>
+    </li>
+    <li><img src="img/nsct.png" alt="Partly Cloudy">
+      <p>Partly Cloudy</p>
+    </li>
+    <li><img src="img/bkn.png" alt="Partly Sunny">
+      <p>Partly Sunny</p>
+    </li>
+    <li><img src="img/nbkn.png" alt="Mostly Cloudy">
+      <p>Mostly Cloudy</p>
+    </li>
+    <li><img src="img/sct.png" alt="Mostly Sunny">
+      <p>Mostly Sunny</p>
+    </li>
+    <li><img src="img/nsct.png" alt="Partly Cloudy">
+      <p>Partly Cloudy</p>
+    </li>
+ </ul>
 </div>
-<div class="weather-list2">
-<ul>
-<li>Showers Likely</li>
-<li>Showers Likely then Chance Showers</li>
-<li>Partly Cloudy</li>
-<li>Sunny</li>
-<li>Partly Cloudy</li>
-<li>Mostly Cloudy</li>
-<li>Mostly Sunny</li>
-<li>Partlu Cloudy</li>
-</ul>
+  </ul>
 </div>
 </div>
 </div>
